Add stats and separate game module

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Alphabet Arkanoid</h1>
+    <div id="stats">
+        Level: <p id="level"></p>
+        Lives: <p id="lives"></p>
+        Points: <p id="points"></p>
+        High score: <p id="highscore"></p>
+    </div>
     <canvas id="game" width="800" height="600"></canvas>
     <script src="script/main.js" type="module"></script>
 </body>
