--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Alphabet Arkanoid</h1>
     <div id="stats">
-        Level: <p id="level"></p>
-        Lives: <p id="lives"></p>
-        Points: <p id="points"></p>
-        High score: <p id="highscore"></p>
+        Level: <span id="level"></span><br/>
+        Lives: <span id="lives"></span><br/>
+        Points: <span id="points"></span><br/>
+        High score: <span id="highscore"></span><br/>
+        Bonuses: <span id="bonuses"></span><br/>
     </div>
     <canvas id="game" width="800" height="600"></canvas>
     <script src="script/main.js" type="module"></script>
